Corrected some typos